# identibench

./: CLAUDE.md  README.md  benchmark.html  index.html  metrics.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  utils.html
.github/workflows/: publish.yaml  test.yaml
datasets/: broad.html  industrial_robot.html  quad_pelican.html  quadrotor_pi.html  ship.html  workshop.html
examples/: 00_getting_started.ipynb
identibench/: __init__.py  _modidx.py  benchmark.py  core.py  data_utils.py  metrics.py  utils.py
identibench/datasets/: __init__.py  broad.py  imu.py  industrial_robot.py  quad_pelican.py  quad_pi.py  ship.py  workshop.py
nbs/: benchmark.ipynb  core.ipynb  data_utils.ipynb  index.ipynb  sidebar.yml  utils.ipynb
nbs/datasets/: broad.ipynb  industrial_robot.ipynb  quad_pelican.ipynb  quadrotor_pi.ipynb  ship.ipynb  workshop.ipynb
tests/: conftest.py  test_benchmark.py  test_downloads.py  test_metrics.py
